--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <button class="but" onclick="generate()">Generate</button>
             <button class="but" onclick="reset()">Reset</button>
         </section>
+        <P>Password Length:</P>
+        <input type="number" id="len" min="0" value="8">
         <Section id="cont">
             <div class="result" id="res1"></div>
             <div class="result" id="res2"></div>
